WCAG: Optional wrapper for .btn-skip-content to comply with rules

--- a/src/Smartstore.Web/Views/Shared/Components/PopularProductTags/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/PopularProductTags/Default.cshtml
@@ -20,7 +20,7 @@
     </div>
 
     <div class="listbox block-body position-relative">
-        <a href="javascript;:" class="btn-skip-content btn btn-primary btn-lg rounded-pill">
+        <a href="javascript;:" class="btn-skip-content btn btn-primary rounded-pill">
             @T("Common.SkipList")
         </a>
         <div class="tags fs-h4">
