--- a/src/Smartstore.Web/Views/ShoppingCart/Partials/_DiscountBox.cshtml
+++ b/src/Smartstore.Web/Views/ShoppingCart/Partials/_DiscountBox.cshtml
@@ -15,7 +15,8 @@
 <fieldset>
     <legend class="sr-only">@T("ShoppingCart.DiscountCouponCode")</legend>
     <div class="cart-action cart-action-coupon">
-        <div class="cart-action-title h5" 
+        <div class="cart-action-title h5"
+             data-ak-accordion-trigger
              attr-class='(!isExpanded, "collapsed")' 
              data-toggle="collapse" 
              data-target="#cart-action-coupon-body" 
