--- a/src/Smartstore.Web/Views/ShoppingCart/Partials/_RewardPointsBox.cshtml
+++ b/src/Smartstore.Web/Views/ShoppingCart/Partials/_RewardPointsBox.cshtml
@@ -14,7 +14,8 @@
 <fieldset>
     <legend class="sr-only">@T("ShoppingCart.RewardPoints")</legend>
     <div class="cart-action cart-action-rewardpoints">
-        <div class="cart-action-title h5" 
+        <div class="cart-action-title h5"
+             data-ak-accordion-trigger
              attr-class='(!isExpanded, "collapsed")' 
              data-toggle="collapse" 
              data-target="#cart-action-rewardpoints-body" 
