--- a/src/Smartstore.Web/Views/ShoppingCart/Partials/_CheckoutAttributes.cshtml
+++ b/src/Smartstore.Web/Views/ShoppingCart/Partials/_CheckoutAttributes.cshtml
@@ -2,9 +2,12 @@
 
 @model IList<ShoppingCartModel.CheckoutAttributeModel>
 
-<div sm-if="Model.Count > 0" class="cart-checkout-attributes">
-	@foreach (var attribute in Model)
-	{
-		<partial name="ChoiceTemplates/Choice" model="attribute" />
-	}
-</div>
+<fieldset sm-if="Model.Count > 0">
+    <legend class="sr-only">@string.Join(", ", Model.Select(x => x.GetLabel())).Truncate(100, "…")</legend>
+    <div class="cart-checkout-attributes">
+	    @foreach (var attribute in Model)
+	    {
+		    <partial name="ChoiceTemplates/Choice" model="attribute" />
+	    }
+    </div>
+</fieldset>
