--- a/src/Smartstore.Web/wwwroot/shared/_text-expander.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_text-expander.scss
@@ -12,7 +12,7 @@
         $c: $site-bg;
     }
 
-    --tebg-start: rgba(var(--bg-color-rgb, #{red($c)},#{green($c)},#{blue($c)}), 0);
+    --tebg-start: rgba(var(--bg-color-rgb, #{to-rgb($c)}), 0);
     --tebg-end: var(--bg-color, #{$c});
 
     .btn-text-expander {
