WCAG: Checkout (wip)

--- a/src/Smartstore.Web/Views/Checkout/Partials/AddAddressButton.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/Partials/AddAddressButton.cshtml
@@ -6,7 +6,11 @@
         <i class="fa fa-plus"></i>
     </div>
     <div class="mt-auto">
-        <button type="button" class="btn btn-primary btn-block add-new-address align-self-end" aria-controls="cnt-add-new-address" aria-expanded="false">
+        <button id="add-address-button"
+                type="button" 
+                class="btn btn-primary btn-block add-new-address align-self-end" 
+                aria-controls="cnt-add-new-address" 
+                aria-expanded="false">
             <span>@T("Admin.Customers.Customers.Addresses.AddNew")</span>
             <i class="fa fa-angle-right" aria-hidden="true"></i>
         </button>
