--- a/src/Smartstore.Web/Views/Checkout/BillingAddress.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/BillingAddress.cshtml
@@ -38,9 +38,9 @@
                 <div class="row card-grid g-3 row-cols-1 row-cols-md-2 row-cols-lg-3 address-list" role="list">
                     @foreach (var item in Model.ExistingAddresses)
                     {
-                        <div class="col">
+                        <div class="col" role="listitem">
                             <div class="card card-body address-list-item">
-                                <div class="address-item" role="listitem">
+                                <div class="address-item">
                                     <button class="btn btn-warning btn-block select-billing-address-button"
                                             data-url="@Url.Action("SelectBillingAddress", new { addressId = item.Id })"
                                             aria-label="@T("Checkout.BillToThisAddress"): @(item.FormattedAddress.Replace("<br>", ", ").RemoveHtml())">
@@ -85,7 +85,10 @@
 
             <zone name="checkout_billing_address_middle" />
 
-            <fieldset id="cnt-add-new-address" class="content-group pt-3" attr-style='(Model.HasAddresses && ViewData.ModelState.IsValid, "display:none")'>
+            <fieldset id="cnt-add-new-address" 
+                      class="content-group pt-3" 
+                      attr-style='(Model.HasAddresses && ViewData.ModelState.IsValid, "display:none")'
+                      aria-labelledby="add-address-button">
                 <legend><span>@T(Model.HasAddresses ? "Checkout.OrEnterNewAddress" : "Checkout.EnterBillingAddress")</span></legend>
                 @if (!Model.HasAddresses && Model.IsShippingRequired)
                 {
@@ -98,13 +101,13 @@
 
                     <div class="buttons">
                         <a href="@Model.PreviousStepUrl" class="btn btn-secondary btn-lg">
-                            <i class="fa fa-angle-left"></i>
+                            <i class="fa fa-angle-left" aria-hidden="true"></i>
                             <span>@T("Common.Back")</span>
                         </a>
                         <input type="submit" id="nextstep" name="nextstep" class="d-none" />
                         <button type="button" class="btn btn-primary btn-lg new-address-next-step-button">
                             <span>@T("Checkout.NextButton")</span>
-                            <i class="fa fa-angle-right"></i>
+                            <i class="fa fa-angle-right" aria-hidden="true"></i>
                         </button>
                     </div>
                 </div>
